cmake_minimum_required(VERSION 3.14)
project(ParticleFluids)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) 
add_subdirectory(vendor/raylib)
file(GLOB_RECURSE SOURCES "src/*.cpp")
add_executable(ParticleFluids ${SOURCES})
target_include_directories(ParticleFluids PUBLIC include)
target_link_libraries(ParticleFluids PRIVATE raylib)